Fixing bugs
* Scoring was always 1 point less
* Added persistent ordering to board
* Orientation warning was squished
* Added back stolen tile highlighting

--- a/web/static/overlay.css
+++ b/web/static/overlay.css
@@ -14,6 +14,11 @@
     text-align: center;
 }
 
+#orientation-warning {
+    line-height: var(--font-size-large);
+    font-size: var(--font-size-large);
+}
+
 table {
     border-collapse: collapse;
     border-style: hidden;
